--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,22 @@ spring:
       host: localhost
       port: 6379
 
+springdoc:
+  api-docs:
+    path: /api-docs
+    groups:
+      enabled: true
+  swagger-ui:
+    enabled: true
+    disable-swagger-default-url: true
+    display-request-duration: true
+    tags-sorter: alpha
+    operations-sorter: method
+  show-actuator: true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  writer-with-default-pretty-printer: true
+
 jwt:
   accessSecret: dGVhbXRoZW1vbWVudGdzbW5ldHasdasdadvcmtpbmdhY2Nlc3NrZXk=
   accessExp: 36000000
